--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "A twitter clone",
   "main": "server.js",
+  "engines": {
+    "node": "12.14.x"
+  },
   "scripts": {
     "client-install": "npm install --prefix client",
     "start": "node server.js",
@@ -10,15 +13,16 @@
     "client": "npm start --prefix client",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "install-client":"cd client && npm install",
-    "build":"cd client && npm run build",
-    "heroku-postbuild":"npm run install-client && npm run build"
+    "install-client": "cd client && npm install",
+    "build": "cd client && npm run build",
+    "heroku-postbuild": "npm run install-client && npm run build"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "concurrently": "^5.2.0",
     "express": "^4.17.1",
+    "express-rate-limit": "^5.1.3",
     "mongoose": "^5.9.14",
     "morgan": "^1.10.0"
   },
